[package]
name = "extract-3gpp-asn1"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1"

[lib]
name = "extract_3gpp_asn1"
path = "src/lib.rs"

[[bin]]
name = "extract-3gpp-asn1"
path = "src/main.rs"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
